tests-integration/tests/snapshots/lowering_unit__ado_fn_not_in_scope.snap
---
source: tests-integration/tests/lowering_unit.rs
---
[
    NotInScope(
        AdoFn {
            kind: Map,
            id: AstId<syntax::cst::ExpressionAdo>(8),
        },
    ),
    NotInScope(
        ExprVariable {
            id: AstId<syntax::cst::ExpressionVariable>(13),
        },
    ),
]
