tests-integration/tests/snapshots/lowering_unit__operator_cycle.snap
---
source: tests-integration/tests/lowering_unit.rs
---
(
    [
        Mutual(
            [
                Idx::<IndexedTermItem>(1),
                Idx::<IndexedTermItem>(0),
            ],
        ),
    ],
    [
        Mutual(
            [
                Idx::<IndexedTypeItem>(1),
                Idx::<IndexedTypeItem>(0),
            ],
        ),
    ],
)
