tests-integration/tests/snapshots/lowering_unit__recursive_synonym_errors.snap
---
source: tests-integration/tests/lowering_unit.rs
---
[
    RecursiveSynonym(
        RecursiveGroup {
            group: [
                Idx::<IndexedTypeItem>(1),
                Idx::<IndexedTypeItem>(0),
            ],
        },
    ),
    RecursiveSynonym(
        RecursiveGroup {
            group: [
                Idx::<IndexedTypeItem>(2),
            ],
        },
    ),
]
